# docs/swagger.json
@@ -15,9 +15,78 @@
         },
         "version": "1.0"
     },
-    "host": "bf.shoggothy.xyz",
+    "host": "bfd.shoggothy.xyz",
     "basePath": "/",
     "paths": {
+        "/dr/devices/bind": {
+            "post": {
+                "description": "向服务端(平台)验签，等待设备激活",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver/Auth"
+                ],
+                "summary": "输入认证信息绑定设备",
+                "parameters": [
+                    {
+                        "description": "传入获得的设备ID,以及一些车主的相关信息",
+                        "name": "AuthInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.DriverAuthInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.BindDeviceResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "onject"
+                        }
+                    }
+                }
+            }
+        },
+        "/dr/devices/scan": {
+            "get": {
+                "description": "扫码向服务端(平台)验签，验签成功，返回待激活设备号码",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver/Auth"
+                ],
+                "summary": "扫码激活设备",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ScanResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "onject"
+                        }
+                    }
+                }
+            }
+        },
         "/dr/factory": {
             "post": {
                 "description": "按照场站距离展示数据，距离近的排名靠前",
@@ -262,7 +331,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.DriverOrdersResponse"
+                            "$ref": "#/definitions/response.DriverOrderFormResponse"
                         }
                     },
                     "400": {
@@ -378,8 +447,8 @@
             }
         },
         "/dr/order/pay": {
-            "put": {
-                "description": "结算",
+            "post": {
+                "description": "“结算功能，检验货仓库存信息，修改货仓库存，修改订单状态信息-待取货。支付等待服务端验签，支付成功，更新平台销量排行，商品销量排行，支付失败，检查订单商品是否满足库存条件”",
                 "consumes": [
                     "application/json"
                 ],
@@ -392,12 +461,12 @@
                 "summary": "补货订单结算",
                 "parameters": [
                     {
-                        "description": "传入订单信息",
+                        "description": "把提交的订单结果直接传进来就好了",
                         "name": "OrderForm",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.DriverOrderForm"
+                            "$ref": "#/definitions/response.SubmitOrderForms"
                         }
                     }
                 ],
@@ -493,7 +562,7 @@
         },
         "/dr/order/submit2": {
             "post": {
-                "description": "使用选中的商品生成订单，从购物车界面跳转到提交订单界面（暂时为未支付状态，设置了30分钟的过期时间，需要等待服务端验签，用户支付完毕）",
+                "description": "使用选中的商品生成订单，从购物车界面跳转到提交订单界面（暂时为未支付状态，设置了30分钟的过期时间）",
                 "consumes": [
                     "application/json"
                 ],
@@ -522,6 +591,44 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/response.DriverOrdersResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/dr/order/{id}/load": {
+            "get": {
+                "description": "“结算功能，检验货仓库存信息，修改货仓库存，修改订单状态信息-待取货。支付等待服务端验签，支付成功，更新平台销量排行，支付失败，检查订单商品是否满足库存条件”",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver/Pay"
+                ],
+                "summary": "补货订单取货",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "取货订单订单编号",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.LoadResponse"
                         }
                     },
                     "400": {
@@ -2099,6 +2206,20 @@
                 }
             }
         },
+        "response.BindDeviceResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "info": {
+                    "$ref": "#/definitions/response.DriverAuthInfo"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "response.CartGroup": {
             "type": "object",
             "properties": {
@@ -2283,6 +2404,23 @@
                 }
             }
         },
+        "response.DriverAuthInfo": {
+            "type": "object",
+            "properties": {
+                "device_id": {
+                    "type": "integer"
+                },
+                "driver_id": {
+                    "type": "integer"
+                },
+                "mobile": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "response.DriverDeviceResponse": {
             "type": "object",
             "properties": {
@@ -2323,13 +2461,33 @@
                 }
             }
         },
-        "response.DriverOrdersResponse": {
+        "response.DriverOrderFormResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
-                "factoryDistance": {
+                "msg": {
+                    "type": "string"
+                },
+                "order_infos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.DriverOrderForm"
+                    }
+                }
+            }
+        },
+        "response.DriverOrdersResponse": {
+            "type": "object",
+            "properties": {
+                "cash": {
+                    "type": "number"
+                },
+                "code": {
+                    "type": "integer"
+                },
+                "factories_distance": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/response.FactoryDistanceReq"
@@ -2338,7 +2496,7 @@
                 "msg": {
                     "type": "string"
                 },
-                "orderInfos": {
+                "order_infos": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.DriverOrderForm"
@@ -2638,6 +2796,9 @@
                 }
             }
         },
+        "response.LoadResponse": {
+            "type": "object"
+        },
         "response.LoginResponse": {
             "type": "object",
             "properties": {
@@ -2754,6 +2915,20 @@
                 }
             }
         },
+        "response.ScanResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "device_id": {
+                    "type": "integer"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "response.ScreenInfoResponse": {
             "type": "object",
             "properties": {
@@ -2805,6 +2980,26 @@
                 },
                 "weekly_sales": {
                     "type": "string"
+                }
+            }
+        },
+        "response.SubmitOrderForms": {
+            "type": "object",
+            "properties": {
+                "cash": {
+                    "type": "number"
+                },
+                "factories_distance": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.FactoryDistanceReq"
+                    }
+                },
+                "order_infos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.DriverOrderForm"
+                    }
                 }
             }
         }
